HighAvailabilityWebApp/network.yaml
Description:
    Network components for Udagram

Parameters:
    EnvironmentName:
        Description: Project Name 
        Type: String
    VpcCidr:
        Description: IPV4 CIDR for VPC 
        Type: String
        Default: 10.0.0.0/16
    PublicSubnet1CIDR:
        Description: Cidr Block for public Subnet 1
        Type: String
        Default: 10.0.0.0/16
    PublicSubnet2CIDR:
        Description: Cidr Block for public Subnet 2
        Type: String
        Default: 10.0.1.0/16
    PrivateSubnet1CIDR:
        Description: Cidr Block for private Subnet 1
        Type: String
        Default: 10.0.2.0/16
    PrivateSubnet2CIDR:
        Description: Cidr Block for private Subnet 2
        Type: String
        Default: 10.0.3.0/16
    


Resources:

    VPC:
        Type: AWS::EC2::VPC 
        Properties:
            CidrBlock: !Ref VpcCidr
            EnableDnsHostnames: true 
            Tags: 
                - Key : Name 
                  Value : !Ref EnvironmentName

    IGW:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
                - Key : Name 
                  Value : !Ref EnvironmentName

    IGWAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            VpcId : !Ref VPC 
            InternetGatewayId : !Ref IGW 

    PublicSubnet1:
        Type: AWS::EC2::Subnet 
        Properties:
            VpcId : !Ref VPC 
            CidrBlock : !Ref PublicSubnet1CIDR
            MapPublicIpOnLaunch: true 
            AvailabilityZone: !Select [ 0, !GetAZs '']   
            Tags: 
                - Key : Name 
                  Value : !Sub ${EnvironmentName} Public Subnet (AZ1)

    PublicSubnet2:
        Type: AWS::EC2::Subnet 
        Properties:
            VpcId : !Ref VPC 
            CidrBlock : !Ref PublicSubnet2CIDR
            MapPublicIpOnLaunch: true 
            AvailabilityZone: !Select [ 0, !GetAZs '']   
            Tags: 
                - Key : Name 
                  Value : !Sub ${EnvironmentName} Public Subnet (AZ2)    
    
    PrivateSubnet1:
        Type: AWS::EC2::Subnet 
        Properties:
            VpcId : !Ref VPC 
            CidrBlock : !Ref PrivateSubnet1CIDR
            MapPublicIpOnLaunch: false 
            AvailabilityZone: !Select [ 0, !GetAZs '']   
            Tags: 
                - Key : Name 
                  Value : !Sub ${EnvironmentName} Private Subnet (AZ1)

    PrivateSubnet2:
        Type: AWS::EC2::Subnet 
        Properties:
            VpcId : !Ref VPC 
            CidrBlock : !Ref PrivateSubnet2CIDR
            MapPublicIpOnLaunch: false
            AvailabilityZone: !Select [ 1, !GetAZs '']   
            Tags: 
                - Key : Name 
                  Value : !Sub ${EnvironmentName} Private Subnet (AZ1)
    
    NatEIP1:
        Type: AWS::EC2::EIP 
        DependsOn: IGWAttachment
        Properties:
            Domain : vpc 
    NatEIP2:
        Type: AWS::EC2::EIP 
        DependsOn: IGWAttachment
        Properties:
            Domain : vpc
    NATGateway1:
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt NatEIP1.AllocationId
            SubnetId: !Ref PublicSubnet1
    NATGateway2:
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt NatEIP2.AllocationId
            SubnetId: !Ref PublicSubnet2
    
    PublicRouteTable:
        Type: AWS::EC2::RouteTable 
        Properties:
            VpcId: !Ref VPC 
            Tags: 
                - Key : Name 
                  Value : !Sub ${EnvironmentName} Public Route 

    DefaultPublicRoute:
        Type: AWS::EC2::Route 
        Properties:
            RouteTableId: !Ref PublicRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref IGW 

    PublicSubnet1RouteAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId: !Ref PublicSubnet1
            RouteTableId: !Ref PublicRouteTable
    PublicSubnet2RouteAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId: !Ref PublicSubnet2
            RouteTableId: !Ref PublicRouteTable

    PrivateRouteTable1:
        Type: AWS::EC2::RouteTable 
        Properties:
            VpcId: !Ref VPC 
            Tags:
                - Key : Name 
                  Value : !Sub ${EnvironmentName} Private Route 1

    DefaultPrivateRoute1:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable1
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NATGateway1 
    
    PrivateSubnet1Associtaion:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId: !Ref PrivateSubnet1
            RouteTableId: !Ref PrivateRouteTable1

    PrivateRouteTable2:
        Type: AWS::EC2::RouteTable 
        Properties:
            VpcId: !Ref VPC 
            Tags:
                - Key : Name 
                  Value : !Sub ${EnvironmentName} Private Route 2

    DefaultPrivateRoute2:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable2
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NATGateway2
    
    PrivateSubnet2Associtaion:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId: !Ref PrivateSubnet2
            RouteTableId: !Ref PrivateRouteTable2


Outputs:
    
    VPC: 
        Description: A reference to the created VPC 
        Value: !Ref VPC
        Export:
            Name: !Sub ${EnvironmentName}-VPCID

    VPCPublicRouteTable:
        Description: Public Route 
        Value: !Ref PublicRouteTable
        Export:
            Name: !Sub ${EnvironmentName}-Public-RT 
    
    VPCPrivateRouteTable1:
        Description: Private Route 1
        Value: !Ref PrivateRouteTable1
        Export:
            Name: !Sub ${EnvironmentName}-PVT-RT-1

    VPCPrivateRouteTable2:
        Description: Private Route 2
        Value: !Ref PrivateRouteTable1
        Export:
            Name: !Sub ${EnvironmentName}-PVT-RT-2

    PublicSubnets:
        Description: Public Subnets 
        Value: !Join [",", [!Ref PublicSubnet1, !Ref PublicSubnet2]]
        Export:
            Name: !Sub ${EnvironmentName}-Public-Subnets 
    PrivateSubnets:
        Description: Private Subnets 
        Value: !Join [",", [!Ref PrivateSubnet1, !Ref PrivateSubnet2]]
        Export:
            Name: !Sub ${EnvironmentName}-PrivateSubnets

    PublicSubnet1:
        Description: A reference to the public subnet in the 1st Availability Zone
        Value: !Ref PublicSubnet1
        Export:
          Name: !Sub ${EnvironmentName}-PUB1-SN

    PublicSubnet2: 
        Description: A reference to the public subnet in the 2nd Availability Zone
        Value: !Ref PublicSubnet2
        Export:
          Name: !Sub ${EnvironmentName}-PUB2-SN

    PrivateSubnet1:
        Description: A reference to the private subnet in the 1st Availability Zone
        Value: !Ref PrivateSubnet1
        Export:
          Name: !Sub ${EnvironmentName}-PRI1-SN

    PrivateSubnet2: 
        Description: A reference to the private subnet in the 2nd Availability Zone
        Value: !Ref PrivateSubnet2
        Export:
          Name: !Sub ${EnvironmentName}-PRI2-SN
